# dreamerv3-torch

./: .gitignore  README.md  configs.yaml  dreamer.py  justfile  models.py  networks.py  pyproject.toml  tools.py
envs/: atari.py  craftax_env.py  crafter.py  dmc.py  dmlab.py  memorymaze.py  minecraft.py  minecraft_base.py  wrappers.py
nbs/: 01_fix_video.ipynb  02_torchinfo copy.ipynb  02_torchinfo.ipynb  load_runs.ipynb
